--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <link href="styles.b35830f1934dbcddbfce.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script>
+<script src="GameShop/runtime-es2015.1eba213af0b233498d9d.js" type="module"></script>
   <script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script>
   <script src="polyfills-es5.dbd43042a7cf47dc578f.js" nomodule defer></script>
-  <script src="polyfills-es2015.6daee520f35267e9e80c.js" type="module"></script>
-  <script src="main-es2015.8a33e209a2bafd5ec64e.js" type="module"></script>
+  <script src="GameShop/polyfills-es2015.6daee520f35267e9e80c.js" type="module"></script>
+  <script src="GameShop/main-es2015.8a33e209a2bafd5ec64e.js" type="module"></script>
   <script src="main-es5.8a33e209a2bafd5ec64e.js" nomodule defer></script>
   </body>
 </html>
