--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>EShopp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link type="image/x-icon" href="favicon.ico">
-<link href="GameShop/styles.b35830f1934dbcddbfce.css"></head>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.b35830f1934dbcddbfce.css"></head>
 <body>
   <app-root></app-root>
 <script src="GameShop/runtime-es2015.1eba213af0b233498d9d.js" type="module"></script>
