--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.b35830f1934dbcddbfce.css"></head>
+<link rel="stylesheet" href="GameShop/styles.b35830f1934dbcddbfce.css"></head>
 <body>
   <app-root></app-root>
 <script src="GameShop/runtime-es2015.1eba213af0b233498d9d.js" type="module"></script>
