--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="GameShop/runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script>
   <script src="GameShop/polyfills-es5.dbd43042a7cf47dc578f.js" nomodule defer></script>
   <script src="GameShop/polyfills-es2015.6daee520f35267e9e80c.js" type="module"></script>
-  <script src="/main-es2015.8a33e209a2bafd5ec64e.js" type="module"></script>
+  <script src="GameShop/main-es2015.8a33e209a2bafd5ec64e.js" type="module"></script>
   <script src="GameShop/main-es5.8a33e209a2bafd5ec64e.js" nomodule defer></script>
   </body>
 </html>
